--- a/style.css
+++ b/style.css
@@ -27,3 +27,6 @@ footer {
 #contact {
     background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/canyon.jpg');
 }
+#cambio{
+  font-family: 'Plaster', cursive;
+}
